# ai-learning

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  ai-radar.md  news-source.md  pyproject.toml
docs/: source-gateway-boundaries.md
docs/superpowers/plans/: 2026-06-28-aihot-ingestion-mvp.md
docs/superpowers/specs/: 2026-06-28-aihot-ingestion-mvp-design.md
sources/: aihot-live.yml  aihot-mvp.yml
src/aihot/: adapters.py  api.py  cli.py  cluster.py  config.py  models.py  normalize.py  pipeline.py  repository.py  scheduler.py  score.py  ui.py
tests/: test_adapters_normalize.py  test_api_cli.py  test_cluster_score.py  test_config.py  test_e2e.py  test_pipeline.py  test_repository.py  test_scheduler.py  test_source_gateways.py  test_ui_pages.py
tests/fixtures/: ai-feed.xml  atom-feed.xml  duplicate-feed.xml  html-extract.html  json-api.json  malformed-feed.xml  same-content-other-url.xml  x-api.json
