[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aihot-ingestion"
version = "0.1.0"
description = "Personal AI HOT-style information ingestion MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "feedparser>=6.0",
  "httpx>=0.28",
  "PyYAML>=6.0",
  "typer>=0.16",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
aihot = "aihot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
